--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.js",
     "lint": "eslint src/**/*.js",
-    "start": "node ./src/index.js"
+    "start": "node ./src/index.js",
+    "build": "npm run build-docs",
+    "build-docs": "redocly bundle --ext json -o docs/swagger.json",
+    "preview-docs": "redocly preview-docs"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.10.0",
+    "@redocly/cli": "^1.25.7",
     "@types/node": "^22.7.5",
     "eslint": "^9.10.0",
     "globals": "^15.9.0",
@@ -35,6 +39,7 @@
     "mongoose": "^8.6.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
-    "pino-http": "^10.3.0"
+    "pino-http": "^10.3.0",
+    "swagger-ui-express": "^5.0.1"
   }
 }
