Removed required fields in PATCH schema for contacts

--- a/swagger/paths/contacts/{id}/patch.yaml
+++ b/swagger/paths/contacts/{id}/patch.yaml
@@ -17,13 +17,7 @@ requestBody:
     multipart/form-data:
       schema:
         type: object
-        required:
-          - _id
-          - name
-          - phoneNumber
-          - email
-          - contactType
-          - userId
+        required: []
         properties:
           name:
             description: "Contact's name"
@@ -31,7 +25,7 @@ requestBody:
             example: 'John Doe'
           phoneNumber:
             description: "Contact's phone number"
-            type: number
+            type: string
             example: '+380000000008'
           email:
             description: "Contact's email"
@@ -49,6 +43,7 @@ requestBody:
             description: "Contact's photo"
             type: string
             format: binary
+            example: "https://res.cloudinary.com/uqwgdu/image/upload/image.png"
 responses:
   '200':
     description: "Contact is successfully updated"
