Made email optional, added 'favorite' option

--- a/swagger/paths/contacts/post.yaml
+++ b/swagger/paths/contacts/post.yaml
@@ -13,7 +13,6 @@ requestBody:
         required:
           - name
           - phoneNumber
-          - email
           - contactType
         properties:
           name:
@@ -28,6 +27,10 @@ requestBody:
               description: "Contact's email"
               type: string
               example: "john_doe@example.com"
+          isFavourite:
+                description: "This contact is favourite"
+                type: boolean
+                example: true
           contactType:
               description: 'Type of contact'
               type: string
